2014-11-17  Ulf Jasper  <ulf.jasper@web.de>

	* automated/icalendar-tests.el (icalendar-tests--test-import):
	Mention timezone in doc string.  Clean up.
	(icalendar-real-world): Add another test case for no-dst
	timezones.

2014-11-16  Ulf Jasper  <ulf.jasper@web.de>

	* automated/icalendar-tests.el (icalendar--parse-vtimezone): Add
	testcase where offsets of standard time and daylight saving time
	are equal.
	(icalendar-real-world): Fix error in test case.  Expected result
	was wrong when offsets of standard time and daylight saving time
	were equal.

2014-11-16  Fabián Ezequiel Gallina  <fgallina@gnu.org>

	* automated/python-tests.el
	(python-shell-calculate-process-environment-2): Fix test.
	(python-shell-calculate-process-environment-1)
	(python-shell-calculate-process-environment-3): Cleanup.

2014-11-16  Fabián Ezequiel Gallina  <fgallina@gnu.org>

	* automated/python-tests.el (python-indent-dedenters-8): New test
	for Bug#18432.

2014-11-16  Fabián Ezequiel Gallina  <fgallina@gnu.org>

	* automated/python-tests.el (python-indent-region-1)
	(python-indent-region-2, python-indent-region-3)
	(python-indent-region-4, python-indent-region-5): New tests.

2014-11-08  Stefan Monnier  <monnier@iro.umontreal.ca>

	* automated/bytecomp-tests.el (bytecomp-tests--warnings): New tests.
	* automated/cl-lib-tests.el: Rename from cl-lib.el.

2014-10-28  Ulf Jasper  <ulf.jasper@web.de>

	* automated/libxml-tests.el: New file.

2014-10-22  Noam Postavsky  <npostavs@users.sourceforget.net>

	* test/automated/process-tests.el (process-test-quoted-batfile):
	New test.

2014-10-20  Glenn Morris  <rgm@gnu.org>

	* Merge in all changes up to 24.4 release.

2014-10-20  Stefan Monnier  <monnier@iro.umontreal.ca>

	* indent/scss-mode.scss: New file.
	* indent/css-mode.css: Add a few uneventful examples.

2014-10-15  Eli Zaretskii  <eliz@gnu.org>

	* BidiCharacterTest.txt: New file, from Unicode.

	* biditest.el: New file.

2014-10-08  Leo Liu  <sdl.web@gmail.com>
