@@ -1,3 +1,8 @@
+2014-11-17  Glenn Morris  <rgm@gnu.org>
+
+	* automated/occur-tests.el (occur-test-case, occur-test-create):
+	In case of failure, show the actual string, rather than just nil.
+
 2014-11-17  Ulf Jasper  <ulf.jasper@web.de>
 
 	* automated/icalendar-tests.el (icalendar-tests--test-import):
